opam-version: "2.0"
name: "bonsai-assoc-util"
synopsis: "Bonsai library for manipulating association maps incrementally"
maintainer: "Bogdan Tataroiu <b.tataroiu@gmail.com>"
authors: [ "Bogdan Tataroiu <b.tataroiu@gmail.com>" ]
depends: [
  "bonsai"
  "core"
  "dune" {build}
  "ppx_jane" {build}
  "ocaml" {build}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
